[package]
name = "mipsasm-rsp"
description = "A MIPS assembler targeting the N64 rsp"
documentation = "https://docs.rs/mipsasm-rsp"
repository = "https://github.com/JoNil/mipsasm/"
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["rsp", "mipsasm", "mips", "assembler", "n64"]
categories = ["encoding", "hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.4.0", default-features = false }
strum = { version = "0.24.1", default-features = false }
strum_macros = { version = "0.24.3", default-features = false }